[tool.poetry]
name = "advent"
version = "0.1.0"
description = ""
authors = ["Kevin Wilson <khwilson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pylint = "^2.6.0"
isort = "^5.6.4"
pytest = "^6.1.2"
pylint-venv = "^2.1.1"
ipdb = "^0.13.4"

[tool.poetry.scripts]
advent = "advent.cli:cli"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pylint.basic]
good-names = "i,j,k,ex,Run,_,df"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
